# agnes-makeathon

./: .gitignore  README.md  package-lock.json  package.json
backend/: create_db.py  main.py  models.py  pyproject.toml
backend/agnes/: agent.py  instruct.txt
backend/agnes/.adk/: session.db
backend/agnes_search/: agent.py  instruct.txt
backend/agnes_search/.adk/: session.db
backend/database/: db.sqlite
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/api/master-data/suppliers/: route.ts
frontend/app/master-data/companies/: page.tsx
frontend/app/master-data/groups/: page.tsx
frontend/app/master-data/products/: page.tsx
frontend/app/master-data/suppliers/: page.tsx
frontend/app/records/purchase-orders/: page.tsx
frontend/components/: app-sidebar.tsx
frontend/components/ui/: table.tsx
hermes-agent-harness/supplier-material-profiling/: SKILL.md
