[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bm25>=0.3.3",
    "fastapi>=0.115.0",
    "google-adk>=1.30.0",
    "google-cloud-aiplatform>=1.148.0",
    "pip>=26.0.1",
    "uvicorn>=0.30.0",
]
